// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with empty version 1`] = `
<section
  title="API details"
>
  <h4>
    Unleash 
     
    <small>
      (
      test
      )
    </small>
  </h4>
  <br />
  <small>
    We are the best!
  </small>
  <br />
</section>
`;

exports[`renders correctly with ui-config 1`] = `
<section
  title="API details"
>
  <h4>
    Unleash 1.1.0
     
    <small>
      (
      test
      )
    </small>
  </h4>
  <br />
  <small>
    We are the best!
  </small>
  <br />
</section>
`;

exports[`renders correctly with versionInfo 1`] = `
<section
  title="API details"
>
  <h4>
    Unleash 1.2.3
     
  </h4>
  <small>
    Upgrade available - Latest Enterprise release: 1.2.4
    <br />
  </small>
  <br />
  <small />
  <br />
  <small>
    1
  </small>
</section>
`;

exports[`renders correctly without uiConfig 1`] = `
<section
  title="API details"
>
  <h4>
    Unleash 1.1.0
     
  </h4>
  <br />
  <small />
  <br />
</section>
`;
